host_ws/log/build_2026-03-10_10-47-46/roboclaw_hardware/stdout_stderr.log
-- The CXX compiler identification is GNU 13.3.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake: 2.5.5 (/opt/ros/jazzy/share/ament_cmake/cmake)
-- Found Python3: /usr/bin/python3 (found version "3.12.3") found components: Interpreter 
-- Found hardware_interface: 4.42.2 (/opt/ros/jazzy/share/hardware_interface/cmake)
-- Found rosidl_generator_c: 4.6.7 (/opt/ros/jazzy/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 4.6.7 (/opt/ros/jazzy/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found TinyXML2 via Config file: /usr/lib/x86_64-linux-gnu/cmake/tinyxml2
-- Found rmw_implementation_cmake: 7.3.3 (/opt/ros/jazzy/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 8.4.3 (/opt/ros/jazzy/share/rmw_fastrtps_cpp/cmake)
-- Found TinyXML2 via Config file: /usr/lib/x86_64-linux-gnu/cmake/tinyxml2
-- Found OpenSSL: /usr/lib/x86_64-linux-gnu/libcrypto.so (found version "3.0.13")  
-- Found TinyXML2 via Config file: /usr/lib/x86_64-linux-gnu/cmake/tinyxml2
-- Found FastRTPS: /opt/ros/jazzy/include (Required is at least version "2.13") 
-- Found TinyXML2 via Config file: /usr/lib/x86_64-linux-gnu/cmake/tinyxml2
-- Found TinyXML2 via Config file: /usr/lib/x86_64-linux-gnu/cmake/tinyxml2
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found ament_cmake_gtest: 2.5.5 (/opt/ros/jazzy/share/ament_cmake_gtest/cmake)
-- Found gtest sources under '/opt/ros/jazzy/src/gtest_vendor': C++ tests using 'Google Test' will be built
-- The C compiler identification is GNU 13.3.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Found Threads: TRUE  
-- Configuring done (2.1s)
-- Generating done (0.1s)
-- Build files have been written to: /host_ws/build/roboclaw_hardware
[  7%] Building CXX object gtest/CMakeFiles/gtest_main.dir/src/gtest_main.cc.o
[ 15%] Building CXX object CMakeFiles/roboclaw_hardware.dir/src/roboclaw_protocol.cpp.o
[ 23%] Building CXX object gtest/CMakeFiles/gtest.dir/src/gtest-all.cc.o
[ 30%] Building CXX object CMakeFiles/roboclaw_hardware.dir/src/unit_converter.cpp.o
[ 38%] Building CXX object CMakeFiles/roboclaw_hardware.dir/src/roboclaw_tcp.cpp.o
[ 46%] Building CXX object CMakeFiles/roboclaw_hardware.dir/src/roboclaw_hardware.cpp.o
/host_ws/src/roboclaw_hardware/src/unit_converter.cpp: In member function ‘int16_t roboclaw_hardware::UnitConverter::rad_per_sec_to_duty(double, double) const’:
/host_ws/src/roboclaw_hardware/src/unit_converter.cpp:72:16: error: ‘clamp’ is not a member of ‘std’
   72 |   ratio = std::clamp(ratio, -1.0, 1.0);
      |                ^~~~~
gmake[2]: *** [CMakeFiles/roboclaw_hardware.dir/build.make:76: CMakeFiles/roboclaw_hardware.dir/src/unit_converter.cpp.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
[ 53%] Linking CXX static library libgtest_main.a
[ 53%] Built target gtest_main
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp: In member function ‘virtual hardware_interface::CallbackReturn roboclaw_hardware::RoboClawHardware::on_init(const hardware_interface::HardwareInfo&)’:
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp:133:51: warning: ‘virtual rclcpp_lifecycle::node_interfaces::LifecycleNodeInterface::CallbackReturn hardware_interface::HardwareComponentInterface::on_init(const hardware_interface::HardwareInfo&)’ is deprecated: Use on_init(const HardwareComponentInterfaceParams & params) instead. [-Wdeprecated-declarations]
  133 |   if (hardware_interface::SystemInterface::on_init(info) !=
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
In file included from /opt/ros/jazzy/include/hardware_interface/hardware_interface/system_interface.hpp:18,
                 from /host_ws/src/roboclaw_hardware/include/roboclaw_hardware/roboclaw_hardware.hpp:9,
                 from /host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp:1:
/opt/ros/jazzy/include/hardware_interface/hardware_interface/hardware_component_interface.hpp:140:26: note: declared here
  140 |   virtual CallbackReturn on_init(const HardwareInfo & hardware_info);
      |                          ^~~~~~~
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp: In member function ‘void roboclaw_hardware::RoboClawHardware::initialize_state_interfaces()’:
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp:470:58: warning: dangling pointer to ‘enc’ may be used [-Wdangling-pointer=]
  470 |     hw_state_pos_[0] = unit_converter_->counts_to_radians(enc.enc1);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp:468:8: note: ‘enc’ declared here
  468 |   auto enc = protocol_->GetEncoders(address_);
      |        ^~~
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp:471:58: warning: dangling pointer to ‘enc’ may be used [-Wdangling-pointer=]
  471 |     hw_state_pos_[1] = unit_converter_->counts_to_radians(enc.enc2);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp:468:8: note: ‘enc’ declared here
  468 |   auto enc = protocol_->GetEncoders(address_);
      |        ^~~
gmake[1]: *** [CMakeFiles/Makefile2:159: CMakeFiles/roboclaw_hardware.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
[ 61%] Linking CXX static library libgtest.a
[ 61%] Built target gtest
gmake: *** [Makefile:146: all] Error 2
